# jed

./: .gitignore  AUTHORS  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac
doc/: Makefile.am  jed.texi
po/: LINGUAS  POTFILES.in  fr.po  jed.pot
src/: Makefile.am  jed.c  jed.h
